// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Member Class New Instance Initializes with Desired Document Model 1`] = `
Member {
  "_dom": Object {
    "attributes": Object {
      "DataType": "DINT",
      "Hidden": false,
      "Name": "tagName",
      "Radix": "decimal",
    },
    "elements": Array [],
    "name": "Member",
    "type": "element",
  },
  "class_id": "cdb6dcc14d327d3c45e6e77e6648d07e",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Member Class New Instance Initializes with Desired Document Model 2`] = `
Member {
  "_dom": Object {
    "attributes": Object {
      "BitNumber": 0,
      "DataType": "BIT",
      "Hidden": false,
      "Name": "tagName",
      "Radix": "binary",
      "Target": "aTarget",
    },
    "elements": Array [],
    "name": "Member",
    "type": "element",
  },
  "class_id": "cdb6dcc14d327d3c45e6e77e6648d07e",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Member Class New Instance Initializes with Desired Document Model 3`] = `
Member {
  "_dom": Object {
    "attributes": Object {
      "BitNumber": 0,
      "DataType": "BIT",
      "Hidden": false,
      "Name": "tagName",
      "Radix": "binary",
      "Target": "aTarget",
    },
    "elements": Array [],
    "name": "Member",
    "type": "element",
  },
  "class_id": "cdb6dcc14d327d3c45e6e77e6648d07e",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Member Class New Instance Initializes with Desired Document Model 4`] = `
Member {
  "_dom": Object {
    "attributes": Object {
      "DataType": "DINT",
      "Hidden": false,
      "Name": "tagName",
      "Radix": "decimal",
    },
    "elements": Array [
      Object {
        "elements": Array [
          Object {
            "cdata": "A Description",
            "type": "cdata",
          },
        ],
        "name": "Description",
        "type": "element",
      },
    ],
    "name": "Member",
    "type": "element",
  },
  "class_id": "cdb6dcc14d327d3c45e6e77e6648d07e",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Member Class New Instance Initializes with Desired Document Model 5`] = `
Member {
  "_dom": Object {
    "attributes": Object {
      "DataType": "DINT",
      "Hidden": true,
      "Name": "tagName",
      "Radix": "decimal",
    },
    "elements": Array [
      Object {
        "elements": Array [
          Object {
            "cdata": "A Description",
            "type": "cdata",
          },
        ],
        "name": "Description",
        "type": "element",
      },
    ],
    "name": "Member",
    "type": "element",
  },
  "class_id": "cdb6dcc14d327d3c45e6e77e6648d07e",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Member Class New Instance Initializes with Desired Document Model 6`] = `
Member {
  "_dom": Object {
    "attributes": Object {
      "DataType": "DINT",
      "Hidden": false,
      "Name": "tagName",
      "Radix": "decimal",
    },
    "elements": Array [
      Object {
        "elements": Array [
          Object {
            "cdata": "A Description",
            "type": "cdata",
          },
        ],
        "name": "Description",
        "type": "element",
      },
    ],
    "name": "Member",
    "type": "element",
  },
  "class_id": "cdb6dcc14d327d3c45e6e77e6648d07e",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Member Class New Instance Initializes with Desired Document Model 7`] = `
Member {
  "_dom": Object {
    "attributes": Object {
      "DataType": "DINT",
      "Hidden": false,
      "Name": "tagName",
      "Radix": "decimal",
    },
    "elements": Array [
      Object {
        "elements": Array [
          Object {
            "cdata": "A Description",
            "type": "cdata",
          },
        ],
        "name": "Description",
        "type": "element",
      },
    ],
    "name": "Member",
    "type": "element",
  },
  "class_id": "cdb6dcc14d327d3c45e6e77e6648d07e",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;
